--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body {
     font-weight: bold;
     position: absolute;
     background-color: #08a840;
-    left: 30%;
+    left: 50%;
+    transform:translate(-50%);
     top: 80%;
     padding: 10px;
     padding-left: 12px;
